<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">
    <shortcut
        android:icon="@drawable/ic_setting"
        android:shortcutId="settings"
        android:shortcutLongLabel="@string/shortcuts_long_label_settings"
        android:shortcutShortLabel="@string/shortcuts_short_label_settings">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="cn.byteroute.io.ui.SettingsActivity"
            android:targetPackage="cn.byteroute.io" />
    </shortcut>
    <shortcut
        android:icon="@drawable/icon_scan"
        android:shortcutId="scan"
        android:shortcutLongLabel="@string/shortcuts_long_label_scan"
        android:shortcutShortLabel="@string/shortcuts_short_label_scan">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="cn.byteroute.io.ui.MainActivity"
            android:targetPackage="cn.byteroute.io" />
    </shortcut>
    <shortcut
        android:icon="@drawable/ic_toggle"
        android:shortcutId="toggle"
        android:shortcutLongLabel="@string/shortcuts_long_label_toggle"
        android:shortcutShortLabel="@string/shortcuts_short_label_toggle">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="cn.byteroute.io.ui.ToggleActivity"
            android:targetPackage="cn.byteroute.io" />
    </shortcut>
</shortcuts>